<resources>
    <string name="app_name">MemoScope</string>
    <string name="log_in">Войти</string>
    <string name="password">Пароль</string>
    <string name="phone">Логин</string>
    <string name="pass_length">Пароль должен содержать %s символов</string>
    <string name="err_empty">Поле не может быть пустым</string>
    <string name="err_wrong_data">Вы ввели не верные данные.\nПопробуйте еще раз</string>
    <string name="err_error">Что-то пошло не так.\nПроверьте подключение или попробуйте позже</string>
    <string name="err_dash">Не удалось загрузить ленту\nОбновите экран или попробуйте позже.</string>
    <string name="err_internet">Отсутствует интернет-соединение\nПопробуйте позже.</string>
    <string name="add_title">Заголовок</string>
    <string name="add_description">Текст</string>
    <string name="add_create">Создать</string>
    <string name="msg_exit">Действительно хотите выйти?</string>
    <string name="cancel">Отмена</string>
    <string name="exit">Выйти</string>
    <string name="mem_date">%s дней назад</string>
    <string name="memCreateTitle">Заголовок</string>
    <string name="memCreateText">Текст</string>
    <string name="camera">С камеры</string>
    <string name="galery">Из галерии</string>
    <string name="chose_pic">Выбрать фото</string>
    <string name="titleProfile">Профиль</string>
    <string name="logoutTitle">Действительно хотите выйти?</string>
    <string name="logoutCancel">Отмена</string>
    <string name="logoutConfirm">Выйти</string>
    <string name="share_menu">Share mem to...</string>
</resources>
