<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/log_layout"
        tools:context=".view.activity.LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutPhone"
            android:hint="@string/phone"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/text_field_blue"
            app:helperTextTextColor="@color/colorGray">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|text"
                android:maxLines="1"
                android:textColor="#FFFFFF"
                android:maxLength="16"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutPass"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/text_field_blue"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutPhone"
            android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:textColor="#FFFFFF"
                android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.circularreveal.CircularRevealFrameLayout
            android:layout_width="0dp"
            android:layout_height="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/circularRevealFrameLayout"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.55"
    >

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:text="@string/log_in"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/MaterialButton"/>


        <androidx.core.widget.ContentLoadingProgressBar
                style="?android:attr/progressBarStyle"
                android:indeterminateTint="@color/colorSecondary"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/progressbarLogin"
                android:layout_gravity="center"
                android:translationZ="20dp"
                android:visibility="invisible"/>


    </com.google.android.material.circularreveal.CircularRevealFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
