<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:title="@string/app_name"
            app:titleTextColor="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSecondary"
            android:minHeight="?attr/actionBarSize">

    <FrameLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageButton
                android:id="@+id/btnClose"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/ic_close"
                android:background="@color/colorSecondary"
                android:tint="@color/bottom_nav_tint"
                android:layout_marginRight="5dp"/>

        <Button
                android:id="@+id/btnSaveMem"
                android:text="Сохранить"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|right"
                android:layout_marginRight="16dp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:shadowColor="@color/colorTransparent"/>


    </FrameLayout>
</androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutTitle"
            style="@style/text_field_blue"
            app:counterMaxLength="140"
            app:counterEnabled="true"
            app:helperTextTextColor="@color/colorGray">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/txtMemTitle"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorGray"
            android:hint="@string/memCreateTitle"
            android:textSize="24sp"
            android:maxLength="140"
/>
</com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutDescr"
            android:layout_marginTop="10dp"
            style="@style/text_field_blue"
            app:counterMaxLength="1000"
            app:counterEnabled="true"
            app:helperTextTextColor="@color/colorGray">

    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/txtMemDescription"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorGray"
            android:hint="@string/memCreateText"
            android:maxLength="1000"
            android:textSize="14sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imgMem"/>
        <ImageButton
                android:id="@+id/buttonDeletePicture"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/ic_close_round"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_gravity="right"/>
        <ImageButton
                android:id="@+id/btnAddPicture"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/ic_photo"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_gravity="bottom|right"
                android:layout_margin="10dp"/>
    </FrameLayout>

</LinearLayout>